# face-detection

./: Cargo.toml  README.md
src/: features.rs  image_processing.rs  main.rs  video_capture.rs
